Set button sizes and paddings